--- a/business/SearchManager.ipynb
+++ b/business/SearchManager.ipynb
@@ -16,8 +16,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T18:57:49.767013Z",
-     "start_time": "2024-05-26T18:57:49.734171Z"
+     "end_time": "2024-05-27T06:29:55.048379Z",
+     "start_time": "2024-05-27T06:29:54.392648Z"
     }
    },
    "cell_type": "code",
@@ -174,7 +174,7 @@
      ]
     }
    ],
-   "execution_count": 11
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -204,7 +204,12 @@
    "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-27T06:30:03.453147Z",
+     "start_time": "2024-05-27T06:29:59.733903Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# User Story 1.1.2\n",
@@ -221,8 +226,16 @@
     "        print(hotel)"
    ],
    "id": "64cd6f8dca9dd479",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hotel(id=1, name='Hotel Amaris', stars=3, address=Address(id=1, street='Tannwaldstrasse 34', city='Olten', zip='4600'))\n"
+     ]
+    }
+   ],
+   "execution_count": 2
   },
   {
    "metadata": {},
