Implement enhanced hotel and room details retrieval functionality
- Added SQL query to fetch detailed hotel information including name, full address, and star rating, joining Hotel and Address tables.
- Implemented get_hotel_details method in SearchManager class to retrieve and return hotel details as a list of dictionaries, optionally filtered by hotel_id.
- Updated SQL query for finding available rooms to include checks for existing bookings within a specified date range, ensuring accurate availability status.
- Enhanced find_available_rooms method in SearchManager to utilize improved SQL query, returning a list of available rooms with comprehensive details including room number, type, max guests, description, amenities, and pricing.
- Corrected imports for SQLAlchemy's and_ and or_ functions to support logical conditions in room availability checks.

--- a/business/SearchManager.ipynb
+++ b/business/SearchManager.ipynb
@@ -16,8 +16,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-27T06:29:55.048379Z",
-     "start_time": "2024-05-27T06:29:54.392648Z"
+     "end_time": "2024-05-27T06:38:22.819006Z",
+     "start_time": "2024-05-27T06:38:19.739309Z"
     }
    },
    "cell_type": "code",
@@ -238,7 +238,12 @@
    "execution_count": 2
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-27T06:41:11.054121Z",
+     "start_time": "2024-05-27T06:40:36.905622Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# 1.1.3. Ich möchte alle Hotels in einer Stadt durchsuchen, die Zimmer\n",
@@ -265,8 +270,28 @@
     "        print(f\"{hotel_name:<20} room number: {room.number} | room type: {room.type} | description: {room.description}| amenities: {room.amenities} | price per night: {room.price} |\")"
    ],
    "id": "572bf22744a6500",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hotel(id=1, name='Hotel Amaris', stars=3, address=Address(id=1, street='Tannwaldstrasse 34', city='Olten', zip='4600'))\n",
+      "Hotel Amaris-->      room number: 01 | room type: single room | description: One single bed| amenities: TV, Caffe Machine | price per night: 124.0 |\n",
+      "Hotel Amaris-->      room number: 02 | room type: double room | description: One double bed| amenities: TV, Caffe Machine | price per night: 138.0 |\n",
+      "Hotel Amaris-->      room number: 03 | room type: single room | description: One single bed| amenities: TV, Caffe Machine | price per night: 124.0 |\n",
+      "Hotel Amaris-->      room number: 04 | room type: double room | description: Two single beds| amenities: TV, Caffe Machine | price per night: 138.0 |\n",
+      "Hotel Amaris-->      room number: 05 | room type: family room | description: One queensized bed and two single beds| amenities: TV, Caffe Machine | price per night: 219.0 |\n",
+      "Hotel Amaris-->      room number: 06 | room type: double room | description: One double bed| amenities: TV, Caffe Machine | price per night: 138.0 |\n",
+      "Hotel Amaris-->      room number: 07 | room type: double room | description: One double bed| amenities: TV, Caffe Machine | price per night: 138.0 |\n",
+      "Hotel Amaris-->      room number: 11 | room type: double room | description: One queensized bed| amenities: TV, Caffe Machine | price per night: 165.0 |\n",
+      "Hotel Amaris-->      room number: 12 | room type: double room | description: One queensized bed| amenities: TV, Caffe Machine | price per night: 165.0 |\n",
+      "Hotel Amaris-->      room number: 13 | room type: double room | description: One queensized bed| amenities: TV, Caffe Machine | price per night: 165.0 |\n",
+      "Hotel Amaris-->      room number: 14 | room type: double room | description: One kingsized bed| amenities: TV, Caffe Machine | price per night: 183.0 |\n",
+      "Hotel Amaris-->      room number: 15 | room type: double room | description: One kingsized bed| amenities: TV, Caffe Machine | price per night: 183.0 |\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -304,8 +329,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T18:57:55.563905Z",
-     "start_time": "2024-05-26T18:57:54.003054Z"
+     "end_time": "2024-05-27T06:38:32.678136Z",
+     "start_time": "2024-05-27T06:38:22.825506Z"
     }
    },
    "cell_type": "code",
@@ -337,13 +362,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Available rooms for hotel id 1:\n",
-      "Room Number: 05 | Type: family room | Max Guests: 4 | Description: One queensized bed and two single beds | Amenities: TV, Caffe Machine | Price per Night: 219.0 | Total Price for 10 Nights: 2190.0\n",
-      "Room Number: 07 | Type: double room | Max Guests: 2 | Description: One double bed | Amenities: TV, Caffe Machine | Price per Night: 138.0 | Total Price for 10 Nights: 1380.0\n"
+      "Available rooms for hotel id 2:\n",
+      "Room Number: 05 | Type: double room | Max Guests: 3 | Description: Komfort Zimmer | Amenities: TV, Caffe Machine | Price per Night: 139.0 | Total Price for 10 Nights: 1390.0\n",
+      "Room Number: 07 | Type: double room | Max Guests: 2 | Description: Superior Zimmer | Amenities: TV, Caffe Machine | Price per Night: 141.0 | Total Price for 10 Nights: 1410.0\n"
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 2
   },
   {
    "metadata": {},
