--- a/business/SearchManager.ipynb
+++ b/business/SearchManager.ipynb
@@ -16,8 +16,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-27T06:38:22.819006Z",
-     "start_time": "2024-05-27T06:38:19.739309Z"
+     "end_time": "2024-05-27T12:51:20.339946Z",
+     "start_time": "2024-05-27T12:51:20.309970Z"
     }
    },
    "cell_type": "code",
@@ -27,7 +27,6 @@
     "from sqlalchemy import select, create_engine, func, and_, or_\n",
     "from sqlalchemy.orm import sessionmaker, scoped_session\n",
     "from pathlib import Path\n",
-    "\n",
     "\n",
     "class SearchManager:\n",
     "    def __init__(self, database_file):\n",
@@ -51,6 +50,28 @@
     "        query = select(Hotel).join(Address).where(func.lower(Address.city.like(f\"%{city}%\")))\n",
     "        hotels = self.__session.execute(query).scalars().all()\n",
     "        return hotels\n",
+    "    \n",
+    "    def search_hotels_by_city_date_guests_stars(self, city, start_date, end_date, max_guest, stars=None):\n",
+    "    \tquery = select(Hotel).join(Address).join(Room).outerjoin(Booking, Room.number == Booking.room_number).where(\n",
+    "        \tand_(\n",
+    "            \tfunc.lower(Address.city) == city.lower(),\n",
+    "            \tRoom.max_guests >= max_guest,\n",
+    "            \tor_(\n",
+    "                \tBooking.id.is_(None),  # Es gibt keine Buchung für das Zimmer\n",
+    "                \tand_(\n",
+    "                    \tBooking.end_date <= start_date,  # Bestehende Buchungen enden vor dem Startdatum\n",
+    "                    \tBooking.start_date >= end_date   # Bestehende Buchungen beginnen nach dem Enddatum\n",
+    "                \t)\n",
+    "            \t)\n",
+    "        \t)\n",
+    "    \t).distinct()\n",
+    "\n",
+    "    \tif stars is not None:\n",
+    "        \tquery = query.where(Hotel.stars == stars)\n",
+    "\n",
+    "    \tresult = self.__session.execute(query).scalars().all()\n",
+    "    \treturn result\n",
+    "\n",
     "\n",
     "    def get_hotels_by_city_and_stars(self, city, stars):\n",
     "        query = select(Hotel).join(Address).where((Address.city.like(f\"%{city}%\") & (Hotel.stars == stars)))\n",
@@ -160,8 +181,7 @@
     "    sm = SearchManager(\"../data/database.db\")\n",
     "    hotels = sm.get_all_hotels()\n",
     "    for hotel in hotels:\n",
-    "        print(hotel)\n",
-    "        "
+    "        print(hotel)"
    ],
    "id": "75a85da0570862b8",
    "outputs": [
@@ -174,7 +194,7 @@
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 48
   },
   {
    "metadata": {},
@@ -187,7 +207,12 @@
    "id": "5086b684e77b4b12"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-27T08:35:09.673213Z",
+     "start_time": "2024-05-27T08:35:06.944295Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# User Story 1.1.1.\n",
@@ -200,14 +225,22 @@
     "    print(hotel)"
    ],
    "id": "fb7888820462f2e7",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hotel(id=1, name='Hotel Amaris', stars=3, address=Address(id=1, street='Tannwaldstrasse 34', city='Olten', zip='4600'))\n"
+     ]
+    }
+   ],
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-27T06:30:03.453147Z",
-     "start_time": "2024-05-27T06:29:59.733903Z"
+     "end_time": "2024-05-27T08:35:22.599434Z",
+     "start_time": "2024-05-27T08:35:17.612863Z"
     }
    },
    "cell_type": "code",
@@ -235,13 +268,13 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-27T06:41:11.054121Z",
-     "start_time": "2024-05-27T06:40:36.905622Z"
+     "end_time": "2024-05-27T08:35:58.855673Z",
+     "start_time": "2024-05-27T08:35:52.299348Z"
     }
    },
    "cell_type": "code",
@@ -291,23 +324,58 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 14
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-27T12:52:51.328289Z",
+     "start_time": "2024-05-27T12:52:21.764990Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# 1.1.4. Ich möchte alle Hotels in einer Stadt durchsuchen,\n",
     "# die während meines Aufenthaltes (\"von\" (start_date) und \"bis\" (end_date)) Zimmer für meine Gästezahl zur Verfügung haben,\n",
     "# entweder mit oder ohne Anzahl der Sterne, damit ich nur relevante Ergebnisse sehe.\n",
-    "city = str(input(\"Enter city: \"))"
+    "\n",
+    "# Hier setzen Sie die Inputs für die Suche\n",
+    "city = input(\"Enter city: \")\n",
+    "start_date = input(\"Enter the start date of your stay (YYYY-MM-DD): \")\n",
+    "end_date = input(\"Enter the end date of your stay (YYYY-MM-DD): \")\n",
+    "max_guest = int(input(\"Enter max guests: \"))\n",
+    "stars = input(\"Enter stars 1 to 5 (optional): \")\n",
+    "if stars == \"\":\n",
+    "    stars = None\n",
+    "else:\n",
+    "    stars = int(stars)\n",
+    "\n",
+    "# Aufruf der Methode\n",
+    "hotels = sm.search_hotels_by_city_date_guests_stars(city, start_date, end_date, max_guest, stars)\n",
+    "if not hotels:\n",
+    "    print(\"No hotels found for your criteria.\")\n",
+    "else:\n",
+    "    for hotel in hotels:\n",
+    "        print(hotel)\n"
    ],
    "id": "a728b2171835f348",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hotel(id=1, name='Hotel Amaris', stars=3, address=Address(id=1, street='Tannwaldstrasse 34', city='Olten', zip='4600'))\n"
+     ]
+    }
+   ],
+   "execution_count": 50
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2024-05-27T09:24:09.566175Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# 1.1.5. Ich möchte die folgenden Informationen pro Hotel sehen:\n",
@@ -329,8 +397,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-27T06:38:32.678136Z",
-     "start_time": "2024-05-27T06:38:22.825506Z"
+     "end_time": "2024-05-27T08:38:42.877230Z",
+     "start_time": "2024-05-27T08:38:41.180319Z"
     }
    },
    "cell_type": "code",
@@ -368,7 +436,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 20
   },
   {
    "metadata": {},
@@ -382,8 +450,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-26T18:58:15.410526Z",
-     "start_time": "2024-05-26T18:58:11.999013Z"
+     "end_time": "2024-05-27T08:39:07.099635Z",
+     "start_time": "2024-05-27T08:38:51.135593Z"
     }
    },
    "cell_type": "code",
@@ -419,18 +487,18 @@
    "id": "b25070b796aac423",
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "invalid literal for int() with base 10: ''",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[13], line 10\u001B[0m\n\u001B[0;32m      7\u001B[0m end_date \u001B[38;5;241m=\u001B[39m \u001B[38;5;28minput\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mEnter the end date of your stay (YYYY-MM-DD): \u001B[39m\u001B[38;5;124m\"\u001B[39m)\n\u001B[0;32m      9\u001B[0m \u001B[38;5;66;03m# Aufrufen der Methode find_available_rooms, um freie Zimmer zu suchen\u001B[39;00m\n\u001B[1;32m---> 10\u001B[0m available_rooms \u001B[38;5;241m=\u001B[39m sm\u001B[38;5;241m.\u001B[39mfind_available_rooms_with_date(hotel_id\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;43mint\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mhotel_id\u001B[49m\u001B[43m)\u001B[49m, start_date\u001B[38;5;241m=\u001B[39mstart_date, end_date\u001B[38;5;241m=\u001B[39mend_date)\n\u001B[0;32m     12\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;129;01mnot\u001B[39;00m available_rooms:\n\u001B[0;32m     13\u001B[0m     \u001B[38;5;28mprint\u001B[39m(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mNo available rooms found for the period from \u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m to \u001B[39m\u001B[38;5;132;01m{}\u001B[39;00m\u001B[38;5;124m.\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;241m.\u001B[39mformat(start_date, end_date))\n",
-      "\u001B[1;31mValueError\u001B[0m: invalid literal for int() with base 10: ''"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available rooms for hotel id 2:\n",
+      "\n",
+      "Room Number: 05 | Type: double room | Max Guests: 3 | Description: Komfort Zimmer | Amenities: TV, Caffe Machine | Price per Night: 139.0 | Total Price for 10 Nights: 1390.0\n",
+      "\n",
+      "Room Number: 07 | Type: double room | Max Guests: 2 | Description: Superior Zimmer | Amenities: TV, Caffe Machine | Price per Night: 141.0 | Total Price for 10 Nights: 1410.0\n"
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 21
   }
  ],
  "metadata": {
