--- a/business/SearchManager.ipynb
+++ b/business/SearchManager.ipynb
@@ -14,12 +14,7 @@
    "id": "afab01d2de8d7e45"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-27T12:51:20.339946Z",
-     "start_time": "2024-05-27T12:51:20.309970Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "from data_models.models import *\n",
@@ -184,17 +179,8 @@
     "        print(hotel)"
    ],
    "id": "75a85da0570862b8",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hotel(id=1, name='Hotel Amaris', stars=3, address=Address(id=1, street='Tannwaldstrasse 34', city='Olten', zip='4600'))\n",
-      "Hotel(id=2, name='Leonardo Boutique Hotel Rigihof Zurich', stars=3, address=Address(id=2, street=' Universitätstrasse 101', city='Zürich', zip='8006'))\n"
-     ]
-    }
-   ],
-   "execution_count": 48
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -207,12 +193,7 @@
    "id": "5086b684e77b4b12"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-27T08:35:09.673213Z",
-     "start_time": "2024-05-27T08:35:06.944295Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# User Story 1.1.1.\n",
@@ -225,24 +206,11 @@
     "    print(hotel)"
    ],
    "id": "fb7888820462f2e7",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hotel(id=1, name='Hotel Amaris', stars=3, address=Address(id=1, street='Tannwaldstrasse 34', city='Olten', zip='4600'))\n"
-     ]
-    }
-   ],
-   "execution_count": 11
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-27T08:35:22.599434Z",
-     "start_time": "2024-05-27T08:35:17.612863Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# User Story 1.1.2\n",
@@ -259,24 +227,11 @@
     "        print(hotel)"
    ],
    "id": "64cd6f8dca9dd479",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hotel(id=1, name='Hotel Amaris', stars=3, address=Address(id=1, street='Tannwaldstrasse 34', city='Olten', zip='4600'))\n"
-     ]
-    }
-   ],
-   "execution_count": 12
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-27T08:35:58.855673Z",
-     "start_time": "2024-05-27T08:35:52.299348Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# 1.1.3. Ich möchte alle Hotels in einer Stadt durchsuchen, die Zimmer\n",
@@ -303,36 +258,11 @@
     "        print(f\"{hotel_name:<20} room number: {room.number} | room type: {room.type} | description: {room.description}| amenities: {room.amenities} | price per night: {room.price} |\")"
    ],
    "id": "572bf22744a6500",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hotel(id=1, name='Hotel Amaris', stars=3, address=Address(id=1, street='Tannwaldstrasse 34', city='Olten', zip='4600'))\n",
-      "Hotel Amaris-->      room number: 01 | room type: single room | description: One single bed| amenities: TV, Caffe Machine | price per night: 124.0 |\n",
-      "Hotel Amaris-->      room number: 02 | room type: double room | description: One double bed| amenities: TV, Caffe Machine | price per night: 138.0 |\n",
-      "Hotel Amaris-->      room number: 03 | room type: single room | description: One single bed| amenities: TV, Caffe Machine | price per night: 124.0 |\n",
-      "Hotel Amaris-->      room number: 04 | room type: double room | description: Two single beds| amenities: TV, Caffe Machine | price per night: 138.0 |\n",
-      "Hotel Amaris-->      room number: 05 | room type: family room | description: One queensized bed and two single beds| amenities: TV, Caffe Machine | price per night: 219.0 |\n",
-      "Hotel Amaris-->      room number: 06 | room type: double room | description: One double bed| amenities: TV, Caffe Machine | price per night: 138.0 |\n",
-      "Hotel Amaris-->      room number: 07 | room type: double room | description: One double bed| amenities: TV, Caffe Machine | price per night: 138.0 |\n",
-      "Hotel Amaris-->      room number: 11 | room type: double room | description: One queensized bed| amenities: TV, Caffe Machine | price per night: 165.0 |\n",
-      "Hotel Amaris-->      room number: 12 | room type: double room | description: One queensized bed| amenities: TV, Caffe Machine | price per night: 165.0 |\n",
-      "Hotel Amaris-->      room number: 13 | room type: double room | description: One queensized bed| amenities: TV, Caffe Machine | price per night: 165.0 |\n",
-      "Hotel Amaris-->      room number: 14 | room type: double room | description: One kingsized bed| amenities: TV, Caffe Machine | price per night: 183.0 |\n",
-      "Hotel Amaris-->      room number: 15 | room type: double room | description: One kingsized bed| amenities: TV, Caffe Machine | price per night: 183.0 |\n"
-     ]
-    }
-   ],
-   "execution_count": 14
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-27T12:52:51.328289Z",
-     "start_time": "2024-05-27T12:52:21.764990Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# 1.1.4. Ich möchte alle Hotels in einer Stadt durchsuchen,\n",
@@ -359,23 +289,11 @@
     "        print(hotel)\n"
    ],
    "id": "a728b2171835f348",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hotel(id=1, name='Hotel Amaris', stars=3, address=Address(id=1, street='Tannwaldstrasse 34', city='Olten', zip='4600'))\n"
-     ]
-    }
-   ],
-   "execution_count": 50
+   "outputs": [],
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2024-05-27T09:24:09.566175Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# 1.1.5. Ich möchte die folgenden Informationen pro Hotel sehen:\n",
@@ -395,12 +313,7 @@
    "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-27T08:38:42.877230Z",
-     "start_time": "2024-05-27T08:38:41.180319Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "# 1.1.6. Ich möchte ein Hotel auswählen, um die Details zu sehen (z.B.\n",
@@ -425,18 +338,8 @@
     "    "
    ],
    "id": "c8ef7425981621fc",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Available rooms for hotel id 2:\n",
-      "Room Number: 05 | Type: double room | Max Guests: 3 | Description: Komfort Zimmer | Amenities: TV, Caffe Machine | Price per Night: 139.0 | Total Price for 10 Nights: 1390.0\n",
-      "Room Number: 07 | Type: double room | Max Guests: 2 | Description: Superior Zimmer | Amenities: TV, Caffe Machine | Price per Night: 141.0 | Total Price for 10 Nights: 1410.0\n"
-     ]
-    }
-   ],
-   "execution_count": 20
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -450,8 +353,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-05-27T08:39:07.099635Z",
-     "start_time": "2024-05-27T08:38:51.135593Z"
+     "end_time": "2024-06-03T06:32:06.119765Z",
+     "start_time": "2024-06-03T06:31:57.577943Z"
     }
    },
    "cell_type": "code",
@@ -494,11 +397,12 @@
       "\n",
       "Room Number: 05 | Type: double room | Max Guests: 3 | Description: Komfort Zimmer | Amenities: TV, Caffe Machine | Price per Night: 139.0 | Total Price for 10 Nights: 1390.0\n",
       "\n",
-      "Room Number: 07 | Type: double room | Max Guests: 2 | Description: Superior Zimmer | Amenities: TV, Caffe Machine | Price per Night: 141.0 | Total Price for 10 Nights: 1410.0\n"
+      "Room Number: 07 | Type: double room | Max Guests: 2 | Description: Superior Zimmer | Amenities: TV, Caffe Machine | Price per Night: 141.0 | Total Price for 10 Nights: 1410.0\n",
+      "\n"
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 4
   }
  ],
  "metadata": {
