Beim InventoryManager.py die Methode hinzugefügt, um Hotels adden zu können mit admin input

--- a/business/SearchManager.ipynb
+++ b/business/SearchManager.ipynb
@@ -8,7 +8,7 @@
     "#### Bitte die Zelle mit den Imports und Methoden zuerst ausführen! (mit Rechtsklick)    \n",
     "#### Weiter unten können die User Stories anschliessend einzeln per Rechtsklick & \"Run cell\" ausgeführt werden.\n",
     "#### (Outputs können jeweils oben mit dem Besen Symbol bereinigt werden.)\n",
-    "#### Viel Spass beim Ausführen der Zellen <span style=\"color: FFA500;\">-Gruppe A</span>\n",
+    "#### Viel Spass beim Ausführen der Zellen <span style=\"color: FFA500;\">-Gruppe 1</span>\n",
     "</h3>"
    ],
    "id": "afab01d2de8d7e45"
