User Interface hinzugefügt (Inventory Manager)

--- a/business/SearchManager.ipynb
+++ b/business/SearchManager.ipynb
@@ -293,7 +293,12 @@
    "execution_count": null
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-03T08:05:42.659840Z",
+     "start_time": "2024-06-03T08:05:27.092998Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# 1.1.5. Ich möchte die folgenden Informationen pro Hotel sehen:\n",
@@ -309,8 +314,16 @@
     "        print(f\"Name: {detail['Name']}, Address: {detail['Address']}, Stars: {detail['Stars']}\")"
    ],
    "id": "4d7f9a0a7dd66747",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: Leonardo Boutique Hotel Rigihof Zurich, Address:  Universitätstrasse 101, 8006, Zürich, Stars: 3\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "metadata": {},
